测试截取字符串，以及升级jdk11切换加密编码的问题